--- a/WebLibrary/WebLibrary.csproj
+++ b/WebLibrary/WebLibrary.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Locators\" />
+    <Compile Remove="Locators\**" />
+    <EmbeddedResource Remove="Locators\**" />
+    <None Remove="Locators\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
 </Project>
