API Test Cases Added

--- a/SeleniumSpecFlow/AppSettings.json
+++ b/SeleniumSpecFlow/AppSettings.json
@@ -1,6 +1,6 @@
 {
   "WebUrl": "http://automationpractice.com/index.php",
-  "ApiUrl": "https://www.google.com/",
+  "ApiUrl": "https://reqres.in/",
   "Username": "ojhabijaya87@outlook.com",
   "Password": "FujitsuTest",
 
